--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,20 +1,5 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsection{Education}
-
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
 \begin{cventries}
-
-%---------------------------------------------------------
-  \cventry
-    {BSc (Hons) in Computer Science} % Degree
-    {University of Salford} % Institution
-    {Salford, Greater Manchester} % Location
-    {Sept 2015 - PRESENT} % Date(s)
+%------------------------------------------------------------------------------- %	SECTION TITLE %------------------------------------------------------------------------------- \cvsection{Education} %------------------------------------------------------------------------------- %	CONTENT %------------------------------------------------------------------------------- \begin{cventries} %--------------------------------------------------------- \cventry {BSc (Hons) in Computer Science} % Degree {University of Salford} % Institution {Salford, Greater Manchester} % Location {Sept 2015 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {\textbf{First Year - 74.6\% Average}} 
@@ -24,12 +9,11 @@
         \item {\textbf{Computer Systems, Internals \& Linux - 70\%} - Learned low-level computer theory and using linux command line for system administration.}
         \item {\textbf{Professional Development \& Practises - 59\%} - Learned project planning and organisation techniques, in addition to formal meeting skills. Also involved a group project planning task.}
         \item {\textbf{Second Year - Currently Studying}} 
-        \item {\textbf{Server Side Programming}}
-        \item {\textbf{Software Architectures}}
-        \item {\textbf{Data Structures \& Algorithms}}
-        \item {\textbf{Artificial Intelligence \& Data Mining}}
-        \item {\textbf{Networking}}
-        \item {\textbf{Software Projects \& Agile Techniques}}
+        \item {\textbf{Server Side Programming} - Used PHP to implement an online store featuring MVC architecture. As an addition, I personally decided to explore further how architectures such are 3-tier and patterns such as front controller are implemented underneath.}
+        \item {\textbf{Software Architectures} - Learning Design Patterns and putting them into practise with Java, JavaFX \& C++, Qt.}
+        \item {\textbf{Data Structures \& Algorithms} - Learning low-level data-structures such as trees, lists, stacks etc. In Java \& C++} 
+        \item {\textbf{Networking} - Learning the low-level structure of networks and protocols as well as applying these skills in a linux environment.}
+        \item {\textbf{Software Projects \& Agile Techniques} - Learning industry best practises such as Agile methodology and TDD (Test Driven Development). Also involves working in an Agile team for 2 weeks on a full time project.}
       \end{cvitems}
     }
 
