Finished CV and Cover Letter Template

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,21 +1,35 @@
-\begin{cventries}
-%------------------------------------------------------------------------------- %	SECTION TITLE %------------------------------------------------------------------------------- \cvsection{Education} %------------------------------------------------------------------------------- %	CONTENT %------------------------------------------------------------------------------- \begin{cventries} %--------------------------------------------------------- \cventry {BSc (Hons) in Computer Science} % Degree {University of Salford} % Institution {Salford, Greater Manchester} % Location {Sept 2015 - PRESENT} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {\textbf{First Year - 74.6\% Average}} 
-        \item {\textbf{Programming - 89\%} - Involved an introduction to Java and Object Oriented Programming.}
-        \item {\textbf{Web Development - 80\%} - Involved building a static website in HTML5 \& CSS3.}
-        \item {\textbf{Database Systems - 75\%} - Went into some depth on SQL and Database Design.}
-        \item {\textbf{Computer Systems, Internals \& Linux - 70\%} - Learned low-level computer theory and using linux command line for system administration.}
-        \item {\textbf{Professional Development \& Practises - 59\%} - Learned project planning and organisation techniques, in addition to formal meeting skills. Also involved a group project planning task.}
-        \item {\textbf{Second Year - Currently Studying}} 
-        \item {\textbf{Server Side Programming} - Used PHP to implement an online store featuring MVC architecture. As an addition, I personally decided to explore further how architectures such are 3-tier and patterns such as front controller are implemented underneath.}
-        \item {\textbf{Software Architectures} - Learning Design Patterns and putting them into practise with Java, JavaFX \& C++, Qt.}
-        \item {\textbf{Data Structures \& Algorithms} - Learning low-level data-structures such as trees, lists, stacks etc. In Java \& C++} 
-        \item {\textbf{Networking} - Learning the low-level structure of networks and protocols as well as applying these skills in a linux environment.}
-        \item {\textbf{Software Projects \& Agile Techniques} - Learning industry best practises such as Agile methodology and TDD (Test Driven Development). Also involves working in an Agile team for 2 weeks on a full time project.}
-      \end{cvitems}
-    }
+\cvsection{Education}
 
-%---------------------------------------------------------
+\begin{cventries}
+      \cventry
+        {First Year - 74.6\% Average}
+        {}
+        {}
+        {}
+        {
+          \begin{cvitems} % Description(s) bullet points
+            \item {\textbf{Programming - 89\%} - Involved an introduction to Java and Object Oriented Programming.}
+            \item {\textbf{Web Development - 80\%} - Involved building a static website in HTML5 \& CSS3.}
+            \item {\textbf{Database Systems - 75\%} - Went into some depth on SQL and Database Design.}
+            \item {\textbf{Computer Systems, Internals \& Linux - 70\%} - Learned low-level computer theory and using linux command line for system administration.}
+            \item {\textbf{Professional Development \& Practises - 59\%} - Learned project planning and organisation techniques, in addition to formal meeting skills. Also involved a group project planning task.}
+          \end{cvitems}
+        }
+\end{cventries}
+
+\begin{cventries}
+      \cventry
+        {Second Year - Currently Studying}
+        {}
+        {}
+        {}
+        {
+          \begin{cvitems} % Description(s) bullet points
+            \item {\textbf{Server Side Programming} - Used PHP to implement an online store featuring MVC architecture. As an addition, I personally decided to explore further how architectures such as 3-tier and patterns such as front controller are implemented underneath modern frameworks.}
+            \item {\textbf{Software Architectures} - Learning Design Patterns and putting them into practise with Java, JavaFX \& C++, Qt.}
+            \item {\textbf{Data Structures \& Algorithms} - Learning low-level data-structures such as trees, lists, stacks etc. In Java \& C++} 
+            \item {\textbf{Networking} - Learning the low-level structure of networks and protocols as well as applying these skills in a linux environment.}
+            \item {\textbf{Software Projects \& Agile Techniques} - Learning industry best practises such as Agile methodology and TDD (Test Driven Development). Also involves working in an Agile team for 2 weeks on a full time project.}
+          \end{cvitems}
+        }
 \end{cventries}
