--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Basic} % Category
-    {Hibernate, REST, Maven, Git, Android, Python, Shell Script, SQL, SASS, JavaScript, Gulp, LaTeX} % Skills
+    {Hibernate, REST, Maven, Git, Agile, TDD, Android, Python, Shell Script, SQL, SASS, JavaScript, Gulp, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
