Filled in About me? and Why me?

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -115,11 +115,11 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Content
+I first picked up the book `Beginning C++ Game Programming' by Michael Dawson at age 14. I learnt the basics of the language but as it came to Object Oriented Programming, I was lost without a guide or mentor. Later in college I picked up VB.NET with ease, which led me to teach myself Java in the year leading up to my University course. I've come to enjoy developing web applications and have a great interest in security, application architecture, software design and upcoming technologies. I aspire to develop my skills much further and work on meaningful projects while meeting and teaming up with new peers and learning from their variety of skills.
 \lettersection{Why Company Name?}
 Content
 \lettersection{Why Me?}
-Content
+I am a dedicated developer, enough to spend my spare time learning and experimenting with new technologies as well as furthering my skills in general. This is what led me to learn Java and Spring in the first place. I strive to write clean code which most likely inspires my interest in application architecture and design pattens. Furthermore, my ability to work collaboratively and communicate should help me smoothly integrate into a team.
 \end{cvletter}
 
 
