--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Basic} % Category
-    {Hibernate, REST, Maven, Git, Agile, TDD, Android, Python, Shell Script, SQL, SASS, JavaScript, Gulp, LaTeX} % Skills
+    {C++, QT, C\#, Python, Maven, Git, Agile, TDD, Android, Shell Scripts, SQL, ORM, REST, SASS, Java Script (ES 6), Gulp, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
