Updated education section.

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -2,6 +2,14 @@
 
 \begin{cventries}
       \cventry
+        {B.S. of Computer Science}
+        {University of Salford}
+        {Salford, United Kingdom}
+        {Sept 2015 - Exp. May 2019}
+        {}
+\end{cventries}
+\begin{cventries}
+      \cventry
         {First Year - 74.6\% Average}
         {}
         {}
@@ -16,7 +24,6 @@
           \end{cvitems}
         }
 \end{cventries}
-
 \begin{cventries}
       \cventry
         {Second Year - Currently Studying}
@@ -27,7 +34,7 @@
           \begin{cvitems} % Description(s) bullet points
             \item {\textbf{Server Side Programming} - Used PHP to implement an online store featuring MVC architecture. As an addition, I personally decided to explore further how architectures such as 3-tier and patterns such as front controller are implemented underneath modern frameworks.}
             \item {\textbf{Software Architectures} - Learning Design Patterns and putting them into practise with Java, JavaFX \& C++, Qt.}
-            \item {\textbf{Data Structures \& Algorithms} - Learning low-level data-structures such as trees, lists, stacks etc. In Java \& C++} 
+            \item {\textbf{Data Structures \& Algorithms} - Learning low-level data-structures such as trees, lists, stacks etc. In Java \& C++}
             \item {\textbf{Networking} - Learning the low-level structure of networks and protocols as well as applying these skills in a linux environment.}
             \item {\textbf{Software Projects \& Agile Techniques} - Learning industry best practises such as Agile methodology and TDD (Test Driven Development). Also involves working in an Agile team for 2 weeks on a full time project.}
           \end{cvitems}
